add firebase